Added node classes
Started code refactoring for new assignment.

--- a/Tema4/Tema4/Tema4.vcxproj
+++ b/Tema4/Tema4/Tema4.vcxproj
@@ -151,6 +151,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Value.h" />
     <ClInclude Include="pch.h" />
   </ItemGroup>
   <ItemGroup>
@@ -161,6 +162,10 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="Tema4.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="date1.in" />
+    <None Include="date2.in" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
